--- a/src/app/components/guest/nav-bar/nav-bar.component.html
+++ b/src/app/components/guest/nav-bar/nav-bar.component.html
@@ -1,1 +1,27 @@
-<p>nav-bar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light">
+  <div class="container">
+    <a class="navbar-brand p-1" [routerLink]="['/home']">
+      <img src="../../../../assets/app_logo.png" width="40" height="40" alt="Banger and Co.">
+    </a>
+
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mr-auto p-2">
+        <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active">Home</a>
+        </li>
+
+        <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/contactus']" routerLinkActive="active">Contact Us</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav p-2">
+        <li class="nav-item p-1">
+          <a class="nav-link">Sign Up</a>
+        </li>
+        <li class="nav-item p-1">
+          <a class="nav-link">Login</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
