--- a/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.html
+++ b/src/app/components/guest/home/jumbotron-home/jumbotron-home.component.html
@@ -7,7 +7,7 @@
         <p class="ml-1" style="font-size: 20px;">Make Your Trip Enjoyable By Renting Out The Best Luxury Cars at a Minimal
           Rate.</p>
 
-        <button class="btn btn-primary mt-3 custom-btn">Browse For Your Luxury Now</button>
+        <button class="btn btn-primary mt-3 custom-btn">Browse For Your Luxury Vehicle Now</button>
         <br><br><br><br><br>
       </div>
     </div>
