Designed initial popup modals for sign up and login

--- a/src/app/components/guest/nav-bar/nav-bar.component.html
+++ b/src/app/components/guest/nav-bar/nav-bar.component.html
@@ -15,11 +15,11 @@
         </li>
       </ul>
       <ul class="navbar-nav p-2">
-        <li class="nav-item p-1">
-          <a class="nav-link">Sign Up</a>
+        <li class="nav-item p-1 hover-action">
+          <a class="nav-link" (click)="openSignUp()">Sign Up</a>
         </li>
-        <li class="nav-item p-1">
-          <a class="nav-link">Login</a>
+        <li class="nav-item p-1 hover-action">
+          <a class="nav-link" (click)="openLogin()">Login</a>
         </li>
       </ul>
     </div>
