--- a/src/app/components/guest/login/login.component.html
+++ b/src/app/components/guest/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<div class="modal-header">
+  <h5 class="modal-title">Login To Your Account</h5>
+  <button type="button" class="close" (click)="closeModal()">
+    <span>&times;</span>
+  </button>
+</div>
+<div class="modal-body">
+
+</div>
+<div class="modal-footer">
+  <button class="btn btn-danger" style="width: 30%;" (click)="closeModal()">Close</button>
+</div>
