--- a/src/app/components/guest/nav-bar/nav-bar.component.css
+++ b/src/app/components/guest/nav-bar/nav-bar.component.css
@@ -3,5 +3,9 @@ nav {
 }
 
 a.active {
-  border-bottom: 3px solid darkblue ;
+  border-bottom: 3px solid darkblue;
+}
+
+.hover-action:hover {
+  cursor: pointer;
 }
