--- a/src/app/components/guest/home/home.component.html
+++ b/src/app/components/guest/home/home.component.html
@@ -1,5 +1,8 @@
-<app-nav-bar></app-nav-bar>
+<div>
+  <app-nav-bar></app-nav-bar>
+</div>
 
-<div class="container">
+<div>
   <app-jumbotron-home></app-jumbotron-home>
 </div>
+
