--- a/src/app/components/guest/nav-bar/nav-bar.component.html
+++ b/src/app/components/guest/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-sm navbar-light">
   <div class="container">
     <a class="navbar-brand p-1" [routerLink]="['/home']">
       <img src="../../../../assets/app_logo.png" width="40" height="40" alt="Banger and Co.">
