Created contact us page

--- a/src/app/components/guest/contact-us/contact-us.component.html
+++ b/src/app/components/guest/contact-us/contact-us.component.html
@@ -1,1 +1,108 @@
 <app-nav-bar></app-nav-bar>
+
+<div class="container">
+
+  <div class="mb-2">
+    <div class="row justify-content-center">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-12">
+            <h6 class="display-4 format-header">We'd love to hear from you</h6>
+          </div>
+          <br>
+          <div class="col-sm-12">
+            <p class="format-title">Fill in the form below along with your inquiry and our team will get back to you as
+              soon as possible.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="box">
+    <div class="row">
+      <div class="col-sm-3 align-center">
+        <div class="row">
+          <div class="col-sm-12" style="text-align: center;">
+            <img src="../../../../assets/contactus_envelope.png" width="250" height="250" class="ml-3"
+              style="text-align: center;">
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-sm-12">
+            <p class="display-4 format-desc ml-3">Fill in your details here. We will get back to you as soon as
+              possible to clarify your inquiry</p>
+
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-9">
+        <div class="row justify-content-center">
+          <div class="col-sm-12">
+            <form class="p-3">
+              <div class="row">
+                <div class="col-sm-5">
+                  <div class="form-group">
+                    <label for="firstNameInput"><b>First Name</b></label>
+                    <input type="text" id="firstNameInput" class="form-control"
+                      placeholder="Enter Your First Name (John)">
+                  </div>
+                </div>
+                <div class="col-sm-7">
+                  <div class="form-group">
+                    <label for="lastNameInput"><b>Last Name</b></label>
+                    <input type="text" id="lastNameInput" class="form-control" placeholder="Enter Your Last Name (Doe)">
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-5">
+                  <div class="form-group">
+                    <label for="contactNumberInput"><b>Contact Number</b></label>
+                    <input type="text" id="contactNumberInput" class="form-control"
+                      placeholder="Enter Your Contact Number">
+                  </div>
+                </div>
+                <div class="col-sm-7">
+                  <div class="form-group">
+                    <label for="emailAddressInput"><b>Email Address</b></label>
+                    <input type="email" id="emailAddressInput" class="form-control"
+                      placeholder="Enter Your Email Here (johndoe@gmail.com)">
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="form-group">
+                    <label for="subjectInputField"><b>Subject</b></label>
+                    <input type="text" placeholder="Provide Your Inquiry Heading Here" id="subjectInputField"
+                      class="form-control">
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-sm-12">
+                  <div class="form-group">
+                    <label for="messageInputField"><b>Message</b></label>
+                    <textarea id="messageInputField" class="form-control additional-fomatting-textarea" rows="6"
+                      col="12" placeholder="State Your Inquiry Here"></textarea>
+                  </div>
+                </div>
+              </div>
+
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12" style="text-align: center;">
+        <button class="btn btn-primary btn-format">Get in Touch</button>
+      </div>
+    </div>
+  </div>
+</div>
