Created breadcrumb UI

--- a/src/app/components/shared/bread-crumb/bread-crumb.component.html
+++ b/src/app/components/shared/bread-crumb/bread-crumb.component.html
@@ -1,1 +1,12 @@
-<p>bread-crumb works!</p>
+<div class="format-bread-crumb-outer mt-2 mb-4">
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="row">
+        <div class="col-sm-12" style="text-align: left;">
+          <i class="fal fa-arrow-to-left format-icon" (click)="goBack()"></i>
+          <span class="text-format">{{pageName}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
