--- a/src/app/components/guest/contact-us/contact-us.component.html
+++ b/src/app/components/guest/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
 <app-nav-bar></app-nav-bar>
-
 <div class="container">
+  <app-bread-crumb [pageName]="'Reach Banger and Co.'"></app-bread-crumb>
 
   <div class="mb-2">
     <div class="row justify-content-center">
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <div class="box">
+  <div class="box mb-4">
     <div class="row">
       <div class="col-sm-3 align-center">
         <div class="row">
