--- a/src/app/components/shared/page-not-found/page-not-found.component.html
+++ b/src/app/components/shared/page-not-found/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-lg-9">
+    <div class="col-lg-9" style="margin: 150px auto 0;">
       <div class="modal-content">
         <div class="modal-body">
           <div class="row justify-content-center">
