Updated Contact UI UI

--- a/src/app/components/guest/contact-us/contact-us.component.html
+++ b/src/app/components/guest/contact-us/contact-us.component.html
@@ -115,15 +115,15 @@
                   </div>
                 </div>
               </div>
-
+              <div class="row">
+                <div class="col-sm-9" style="text-align: center;">
+                  <button class="btn btn-primary btn-format" type="submit" [disabled]="theForm.invalid">Get in
+                    Touch</button>
+                </div>
+              </div>
             </form>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12" style="text-align: center;">
-        <button class="btn btn-primary btn-format" [disabled]="theForm.invalid">Get in Touch</button>
       </div>
     </div>
   </div>
