--- a/src/app/components/guest/nav-bar/nav-bar.component.html
+++ b/src/app/components/guest/nav-bar/nav-bar.component.html
@@ -11,6 +11,10 @@
         </li>
 
         <li class="nav-item p-1">
+          <a class="nav-link" [routerLink]="['/aboutus']" routerLinkActive="active">About Us</a>
+        </li>
+
+        <li class="nav-item p-1">
           <a class="nav-link" [routerLink]="['/contactus']" routerLinkActive="active">Contact Us</a>
         </li>
       </ul>
