Created about us component

--- a/src/app/components/guest/about-us/about-us.component.html
+++ b/src/app/components/guest/about-us/about-us.component.html
@@ -1,1 +1,39 @@
-<p>about-us works!</p>
+<app-nav-bar></app-nav-bar>
+
+<div class="container">
+  <app-bread-crumb [pageName]="'About Banger and Co.'"></app-bread-crumb>
+
+  <div class="row">
+    <div class="col-sm-12 coloring">
+      <p class="display-4 heading-formatting">Our Work</p>
+
+      <ul>
+        <li class="list-group-item primary-item">We are a small-family owned vehicle rental company.</li>
+        <li class="list-group-item primary-item mt-2">We give you a chace to rent your dream vehicle at an
+          affordable rate.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col-sm-12 coloring">
+      <p class="display-4 heading-formatting">Our Mission</p>
+      <ul>
+        <li class="list-group-item primary-item">We will consistently deliver a quality product and provide a
+          friendly service that is stress and hassle free
+          with great value for our
+          customers.</li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="row mt-2">
+    <div class="col-sm-12 coloring">
+      <p class="display-4 heading-formatting">Our Vision</p>
+      <ul>
+        <li class="list-group-item primary-item">We will lead our industry by maintaining excellent service
+          towards our customers and building unmatched brand recognition.</li>
+      </ul>
+    </div>
+  </div>
+</div>
