--- a/src/styles.css
+++ b/src/styles.css
@@ -7,3 +7,29 @@ body {
   color: red;
   font-size: 12px;
 }
+
+/* sets the width of scrollbar */
+::-webkit-scrollbar{
+  width: 10px;
+}
+
+/* sets the color of the overall scroll bar */
+::-webkit-scrollbar-track{
+  background-color: rgba(148, 144, 144, 0.61);
+}
+
+/* shows scrollable content  */
+::-webkit-scrollbar-thumb{
+  background-color: rgb(136, 136, 136);
+  transition: background-color 0.5s;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background-color: rgb(92, 91, 91);
+}
+
+/* shows the up down scroll */
+::-webkit-scrollbar-button{
+  background-color: rgba(0, 0, 0, 0.788);
+}
+
