Created login to signup modal change

--- a/src/app/components/guest/login/login.component.html
+++ b/src/app/components/guest/login/login.component.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="row justify-content-center">
-          <p class="mt-3">Not Registered Yet? Click <a class="format-url">Here</a> To Sign Up</p>
+          <p class="mt-3">Not Registered Yet? Click <a (click)="openSignUp()" class="format-url">Here</a> To Sign Up</p>
         </div>
       </form>
     </div>
