--- a/src/app/components/guest/contact-us/contact-us.component.html
+++ b/src/app/components/guest/contact-us/contact-us.component.html
@@ -45,7 +45,7 @@
               <div class="row">
                 <div class="col-sm-5">
                   <div class="form-group">
-                    <label for="firstNameInput"><b>First Name</b></label>
+                    <label for="firstNameInput"><b class="weight">First Name</b></label>
                     <input type="text" id="firstNameInput" class="form-control"
                       placeholder="Enter Your First Name (Required)" [formControlName]="'firstName'">
                     <span class="form-error"
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-sm-7">
                   <div class="form-group">
-                    <label for="lastNameInput"><b>Last Name</b></label>
+                    <label for="lastNameInput"><b class="weight">Last Name</b></label>
                     <input type="text" id="lastNameInput" class="form-control"
                       placeholder="Enter Your Last Name (Required)" [formControlName]="'lastName'">
                     <span class="form-error"
@@ -68,7 +68,7 @@
               <div class="row">
                 <div class="col-sm-5">
                   <div class="form-group">
-                    <label for="contactNumberInput"><b>Contact Number</b></label>
+                    <label for="contactNumberInput"><b class="weight">Contact Number</b></label>
                     <input type="text" id="contactNumberInput" class="form-control"
                       placeholder="Enter Your Contact Number (Required)" [formControlName]="'contactNumber'">
                     <span class="form-error"
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-sm-7">
                   <div class="form-group">
-                    <label for="emailAddressInput"><b>Email Address</b></label>
+                    <label for="emailAddressInput"><b class="weight">Email Address</b></label>
                     <input type="email" id="emailAddressInput" class="form-control"
                       placeholder="Enter Your Email Here (Required)" [formControlName]="'emailAddress'">
                     <span class="form-error"
@@ -93,7 +93,7 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
-                    <label for="subjectInputField"><b>Subject</b></label>
+                    <label for="subjectInputField"><b class="weight">Subject</b></label>
                     <input type="text" placeholder="Provide Your Inquiry Heading Here (Required)" id="subjectInputField"
                       class="form-control" [formControlName]="'subject'">
                     <span class="form-error"
@@ -106,7 +106,7 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="form-group">
-                    <label for="messageInputField"><b>Message</b></label>
+                    <label for="messageInputField"><b class="weight">Message</b></label>
                     <textarea id="messageInputField" class="form-control additional-fomatting-textarea" rows="6"
                       col="12" placeholder="State Your Inquiry Here (Required)"
                       [formControlName]="'message'"></textarea>
