--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,7 @@ body {
 ::-webkit-scrollbar-button {
   background-color: rgba(0, 0, 0, 0.788);
 }
+
+.cdk-overlay-container {
+  z-index: 1200;
+}
