Updated About Us

--- a/src/app/components/guest/about-us/about-us.component.html
+++ b/src/app/components/guest/about-us/about-us.component.html
@@ -8,9 +8,18 @@
       <p class="display-4 heading-formatting">Our Work</p>
 
       <ul>
-        <li class="list-group-item primary-item">We are a small-family owned vehicle rental company.</li>
-        <li class="list-group-item primary-item mt-2">We give you a chace to rent your dream vehicle at an
-          affordable rate.</li>
+        <li class="list-group-item primary-item">
+          <span>
+            We are a small-family owned vehicle
+            rental company.
+          </span>
+          <br>
+          <span>
+            We give you a chace to rent your
+            dream vehicle at an
+            affordable rate.
+          </span>
+        </li>
       </ul>
     </div>
   </div>
