--- a/src/app/components/shared/bread-crumb/bread-crumb.component.html
+++ b/src/app/components/shared/bread-crumb/bread-crumb.component.html
@@ -1,10 +1,12 @@
-<div class="format-bread-crumb-outer mt-2 mb-4">
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="row">
-        <div class="col-sm-12" style="text-align: left;">
-          <i class="fal fa-arrow-to-left format-icon" (click)="goBack()"></i>
-          <span class="text-format">{{pageName}}</span>
+<div class="format-bread-crumb-outer mb-4">
+  <div class="container">
+    <div class="row padding-format">
+      <div class="col-sm-12">
+        <div class="row">
+          <div class="col-sm-12" style="text-align: left;">
+            <i class="fal fa-arrow-to-left format-icon" (click)="goBack()"></i>
+            <span class="text-format">{{pageName}}</span>
+          </div>
         </div>
       </div>
     </div>
