--- a/src/app/components/shared/bread-crumb/bread-crumb.component.html
+++ b/src/app/components/shared/bread-crumb/bread-crumb.component.html
@@ -4,7 +4,7 @@
       <div class="col-sm-12">
         <div class="row">
           <div class="col-sm-12" style="text-align: left;">
-            <i class="fal fa-arrow-to-left format-icon" (click)="goBack()"></i>
+            <i class="fas fa-arrow-left format-icon" (click)="goBack()"></i>
             <span class="text-format">{{pageName}}</span>
           </div>
         </div>
