--- a/src/app/components/customer/customer-nav/customer-nav.component.html
+++ b/src/app/components/customer/customer-nav/customer-nav.component.html
@@ -12,7 +12,7 @@
       </ul>
       <ul class="navbar-nav ml-auto p-2">
         <div class="btn-group" dropdown>
-          <!-- dropdown used to denote the drop down section -->
+          <!-- dropdown used to denote the drop down section, placed on a button group to denote a collection of buttons -->
           <li class="nav-item p-1 user-handler">
             <span dropdownToggle>
               <!-- dropdownToggle used to denote the item that triggers the dropdown on/off -->
